# SmolTankeryGame

./: CMakeLists.txt
src/: CMakeLists.txt  smolTankeryGame.cpp  smolTankeryGame.h
